# otic

./: .gitignore  .kick.yml  .kickstartconfig  CMakeLists.txt  LICENSE  README.md  composer.json  kickstart.sh  phpunit.xml  requirements.txt
.github/workflows/: build.yml  buildotic.yml  test.yml
bindings/go/: README.md
bindings/go/test/: test.go
bindings/php/: CMakeLists.txt  README.md  test.php
bindings/php/cmake/: installExt.cmake  php.cmake
bindings/php/demo/pack/: simple_pack.php
bindings/php/demo/tsvParser/: tsvParser.php
bindings/php/demo/unpack/: simple_unpack.php
bindings/php/doc/: binding_structure.md
bindings/php/src/: config.m4  otic_php.c  otic_php.h
bindings/php7/: .gitignore  CMakeLists.txt  OticPackTest.php  README.md  composer.json  otic.php  otic.php.stub  otic.stub.php
bindings/php7/cmake/: cmake_uninstall.cmake.in  installExt.cmake  php.cmake  stub_generator.cmake
bindings/php7/include/: aggregator.h  oticException.h  otic_exception.h  otic_php.h  otic_php_pack.h  otic_php_unpack.h  portability.h
bindings/php7/src/: aggegrator.c  oticException.c  otic_exception.c  otic_php.c  otic_php_pack.c  otic_php_unpack.c
bindings/php7/test/: LibOticExceptionTest.php  OticExceptionTest.php  OticPackChannelTest.php  OticPackTest.php  OticUnpackChannelTest.php  OticUnpackTest.php  pack.php  test.php  unpack.php
bindings/php7/test/mockBuilder/: builder.php  singleton.php
bindings/php7_4/: .kick.yml
bindings/php7_4/ext/: libotic.so.1.0.0
bindings/php7_4/ext2/: libotic.so.1.0.0
bindings/php7_4/src/core/: OticExceptions.php  OticPack.php
cmake/: dependencies.cmake  oticConfig.cmake.in  single_header_gen.cmake  tools.cmake
demo/: CMakeLists.txt
demo/pack_demo/: pack_demo.c
demo/tsvParser/: tsvParser.c
demo/unpack_demo/: unpack_demo.c
doc/: OTIC_FORMAT.md  OTIC_RAW_FORMAT.md  OTIC_SENSOR_BASE_FORMAT.md  otic-cmd.md  otic-entwurf.php
examples/: Makefile  printall.c  resources.c
include/: otic.h
include/compare/: compare.c  compare.h
include/config/: config.h  config.h.in
include/core/: base.h  config.h  config.h.in  pack.h  portability.h  unpack.h
include/errHand/: errHand.c  errHand.h
include/format/: format.c  format.h
include/hash/: hash.c
include/utilities/: utilities.c  utilities.h
include/utility/: aggregator.h  compare.h  errHand.h  format.h  timeseries.h
lib/: libzstd.so.1.4.3
phpsrc/otic/: .gitignore  config.m4  otic.c  php_otic.h
phpsrc/otic/tests/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt  decreasingtimestamp.phpt  metadata.phpt  readstream.phpt  somedata.otic  stats.phpt
src/: CMakeLists.txt  Makefile  internal.h  make_singleheader.py  otic.c  otic.h
src/core/: base.c  core.c  core.h  pack.c  portability.c  unpack.c
src/oticreference/: __init__.py  build_cffi.py  reference.py
src/oticreference/test/: test_creader.py  test_cwriter.py  test_reference.py
src/pack/: pack.c  pack.h
src/unpack/: unpack.c  unpack.h
src/utility/: aggregator.c  compare.c  errHand.c  format.c  timeSerie.c
test/: CMakeLists.txt
test/core/: base.c  pack.c  packChannel.c  pack_unpack.c
test/ctest/: CMakeLists.txt  base.c  format.c  pack.c
test/ctest/include/: otic_test.c  otic_test.h
test/ctest/src/: aggregator.c  base.c  format.c  pack.c  pack_unpack.c  test_test.c
test/fuzz/: CMakeLists.txt  format_fuzz.c
test/utility/: format.c
tests/: CMakeLists.txt  test_asserts.h
tests/base/: base.c
tests/format/: format.c  format_test.c
tests/pack/: pack.c
tests/packChannel/: packChannel.c
tests/pack_unpack/: pack_unpack.c
